--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
     <title>strona</title>
 </head>
 <body>
-    <p></p>
-    <p></p>
+    <div class="contener">
+        <p></p>
+        <p></p>
+    </div>
+
 </body>
 </html>
