--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
     <div class="contener">
-        <p></p>
-        <p></p>
+        <p>Akapit 1 </p>
+        <p>Akapit 2 </p>
     </div>
 
 </body>
